[gd_scene load_steps=42 format=3 uid="uid://3bktwps6pw33"]

[ext_resource type="Texture2D" uid="uid://caopkrdhyl6nt" path="res://assets/globali/Enemies/Necromancer_creativekind-Sheet.png" id="1_5s5al"]
[ext_resource type="Script" path="res://scripts/globali/enemies/necromancer/necromancer.gd" id="1_eqp6n"]
[ext_resource type="Script" path="res://scripts/globali/facing_nodes/facing_collision_shape.gd" id="2_dn64w"]
[ext_resource type="Shader" uid="uid://cr6q0xqv0sfdk" path="res://scripts/resources/shaders/hit_flash.tres" id="2_ivtlo"]
[ext_resource type="Script" path="res://scripts/globali/facing_nodes/sprite_attack_offset.gd" id="2_lue7s"]
[ext_resource type="Script" path="res://scripts/globali/State Machine/damageable.gd" id="2_tavfn"]
[ext_resource type="Script" path="res://scripts/globali/State Machine/CharacterStateMachine.gd" id="3_wofko"]
[ext_resource type="Script" path="res://scripts/globali/State Machine/states/walk_state.gd" id="4_ky0uy"]
[ext_resource type="Script" path="res://scripts/globali/State Machine/states/chase_state.gd" id="5_h8lsu"]
[ext_resource type="Script" path="res://scripts/globali/State Machine/states/hit_state.gd" id="6_1l76g"]
[ext_resource type="Script" path="res://scripts/globali/State Machine/states/attack_state.gd" id="7_bcv5l"]
[ext_resource type="PackedScene" uid="uid://c5cvstt813ph0" path="res://scenes/globali/UI/state_debug_label.tscn" id="9_qjrf5"]
[ext_resource type="Script" path="res://scripts/globali/facing_nodes/facing_ray_cast.gd" id="11_dv08v"]
[ext_resource type="Script" path="res://scripts/globali/State Machine/states/death_state.gd" id="11_fc2e6"]
[ext_resource type="Script" path="res://scripts/globali/enemies/attack_zone.gd" id="12_iaaq5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hy0no"]
resource_local_to_scene = true
shader = ExtResource("2_ivtlo")
shader_parameter/enabled = false
shader_parameter/tint = Color(1, 1, 1, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x3b5d"]
size = Vector2(23, 41)

[sub_resource type="Animation" id="Animation_nvty3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [85]
}

[sub_resource type="Animation" id="Animation_m7ke3"]
resource_name = "attack"
length = 1.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_5s5al")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [17]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AttackZone")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"hit"
}]
}

[sub_resource type="Animation" id="Animation_htka3"]
resource_name = "death"
length = 0.9
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_5s5al")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [17]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [102, 103, 104, 105, 106, 107, 108, 109, 110]
}

[sub_resource type="Animation" id="Animation_xmml4"]
resource_name = "hit"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_5s5al")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [17]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [85, 86, 87, 88, 89]
}

[sub_resource type="Animation" id="Animation_gb4jv"]
resource_name = "idle"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_5s5al")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [17]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_g1tlq"]
resource_name = "walk"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_5s5al")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [17]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [17, 18, 19, 20, 21, 22, 23, 24]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b22kj"]
_data = {
"RESET": SubResource("Animation_nvty3"),
"attack": SubResource("Animation_m7ke3"),
"death": SubResource("Animation_htka3"),
"hit": SubResource("Animation_xmml4"),
"idle": SubResource("Animation_gb4jv"),
"walk": SubResource("Animation_g1tlq")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_i1igg"]
animation = &"attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_it2gf"]
animation = &"death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2thm2"]
animation = &"hit"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fwt25"]
animation = &"walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ujkpt"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_72ath"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xvfrj"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_q8cfo"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1aer7"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6pgep"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1grr0"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2qwkg"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_nsr61"]
states/attack/node = SubResource("AnimationNodeAnimation_i1igg")
states/attack/position = Vector2(472, 207)
states/death/node = SubResource("AnimationNodeAnimation_it2gf")
states/death/position = Vector2(619, 100)
states/hit/node = SubResource("AnimationNodeAnimation_2thm2")
states/hit/position = Vector2(309, 207)
states/walk/node = SubResource("AnimationNodeAnimation_fwt25")
states/walk/position = Vector2(376, 100)
transitions = ["Start", "walk", SubResource("AnimationNodeStateMachineTransition_ujkpt"), "walk", "death", SubResource("AnimationNodeStateMachineTransition_72ath"), "walk", "attack", SubResource("AnimationNodeStateMachineTransition_xvfrj"), "attack", "walk", SubResource("AnimationNodeStateMachineTransition_q8cfo"), "walk", "hit", SubResource("AnimationNodeStateMachineTransition_1aer7"), "hit", "walk", SubResource("AnimationNodeStateMachineTransition_6pgep"), "attack", "death", SubResource("AnimationNodeStateMachineTransition_1grr0"), "attack", "hit", SubResource("AnimationNodeStateMachineTransition_2qwkg")]
graph_offset = Vector2(-45, 21)

[sub_resource type="Animation" id="Animation_jjv20"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_pi610"]
resource_name = "hit_flash"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l1x5e"]
_data = {
"RESET": SubResource("Animation_jjv20"),
"hit_flash": SubResource("Animation_pi610")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8y436"]
size = Vector2(67, 41)

[node name="Necromancer" type="CharacterBody2D" node_paths=PackedStringArray("ray_cast_right", "ray_cast_left", "ray_cast_down", "facing_collision_shape", "facing_collision_shape_attack_zone", "facing_ray_cast_right", "facing_ray_cast_left", "facing_ray_cast_down")]
collision_layer = 4
script = ExtResource("1_eqp6n")
ray_cast_right = NodePath("RayCastRight")
ray_cast_left = NodePath("RayCastLeft")
ray_cast_down = NodePath("RayCastDown")
facing_collision_shape = NodePath("CollisionShape2D")
facing_collision_shape_attack_zone = NodePath("AttackZone/CollisionShape2D")
facing_ray_cast_right = NodePath("RayCastRight")
facing_ray_cast_left = NodePath("RayCastLeft")
facing_ray_cast_down = NodePath("RayCastDown")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_hy0no")
position = Vector2(0, -41)
script = ExtResource("2_lue7s")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -6.5)
shape = SubResource("RectangleShape2D_x3b5d")
script = ExtResource("2_dn64w")
facing_left_position = Vector2(-0.5, -6.5)
facing_right_position = Vector2(-0.5, -6.5)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_b22kj")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_nsr61")
anim_player = NodePath("../AnimationPlayer")

[node name="HitFlashAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_l1x5e")
}

[node name="Damageable" type="Node" parent="."]
script = ExtResource("2_tavfn")

[node name="CharacterStateMachine" type="Node" parent="." node_paths=PackedStringArray("character", "current_state", "animation_tree")]
script = ExtResource("3_wofko")
character = NodePath("..")
current_state = NodePath("Walk")
animation_tree = NodePath("../AnimationTree")

[node name="Walk" type="Node" parent="CharacterStateMachine"]
script = ExtResource("4_ky0uy")

[node name="DirectionTimer" type="Timer" parent="CharacterStateMachine/Walk"]
wait_time = 5.0
autostart = true

[node name="Chase" type="Node" parent="CharacterStateMachine"]
script = ExtResource("5_h8lsu")

[node name="Timer" type="Timer" parent="CharacterStateMachine/Chase"]
wait_time = 15.0

[node name="Hit" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("damageable")]
script = ExtResource("6_1l76g")
damageable = NodePath("../../Damageable")
can_move = false

[node name="Timer" type="Timer" parent="CharacterStateMachine/Hit"]
wait_time = 0.1
one_shot = true

[node name="Attack" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("sprite")]
script = ExtResource("7_bcv5l")
sprite = NodePath("../../Sprite2D")
can_move = false

[node name="Death" type="Node" parent="CharacterStateMachine"]
script = ExtResource("11_fc2e6")

[node name="RayCastRight" type="RayCast2D" parent="."]
target_position = Vector2(14, 0)
script = ExtResource("11_dv08v")

[node name="RayCastLeft" type="RayCast2D" parent="."]
target_position = Vector2(-17, 0)
script = ExtResource("11_dv08v")

[node name="RayCastDown" type="RayCast2D" parent="."]
position = Vector2(17, 0)
target_position = Vector2(0, 24)
script = ExtResource("11_dv08v")
facing_left_position = Vector2(-17, 0)
facing_right_position = Vector2(17, 0)

[node name="AttackZone" type="Area2D" parent="." node_paths=PackedStringArray("character")]
collision_layer = 0
collision_mask = 2
script = ExtResource("12_iaaq5")
character = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackZone"]
position = Vector2(44.5, -6.5)
shape = SubResource("RectangleShape2D_8y436")
script = ExtResource("2_dn64w")
facing_left_position = Vector2(-45.5, -6.5)
facing_right_position = Vector2(44.5, -6.5)

[node name="BufferTimer" type="Timer" parent="AttackZone"]
wait_time = 4.0
one_shot = true

[node name="StateDebugLabel" parent="." node_paths=PackedStringArray("state_machine") instance=ExtResource("9_qjrf5")]
offset_left = -45.0
offset_top = -49.0
offset_right = 31.0
offset_bottom = -34.0
scale = Vector2(0.835461, 0.835461)
state_machine = NodePath("../CharacterStateMachine")

[connection signal="animation_finished" from="AnimationTree" to="CharacterStateMachine/Attack" method="_on_animation_tree_animation_finished"]
[connection signal="animation_finished" from="AnimationTree" to="CharacterStateMachine/Death" method="_on_animation_tree_animation_finished"]
[connection signal="timeout" from="CharacterStateMachine/Walk/DirectionTimer" to="CharacterStateMachine/Walk" method="_on_direction_timer_timeout"]
[connection signal="timeout" from="CharacterStateMachine/Chase/Timer" to="CharacterStateMachine/Chase" method="_on_timer_timeout"]
[connection signal="timeout" from="CharacterStateMachine/Hit/Timer" to="CharacterStateMachine/Hit" method="_on_timer_timeout"]
[connection signal="body_entered" from="AttackZone" to="AttackZone" method="_on_body_entered"]
